kubeflow/best_chinese/setp/two/metadata.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    component: db
    kustomize.component: metadata
  name: metadata-db
  namespace: kubeflow
spec:
  ports:
  - name: dbapi
    port: 3306
    protocol: TCP
  selector:
    component: db
    kustomize.component: metadata
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: metadata
    kustomize.component: metadata
  name: metadata-service
  namespace: kubeflow
spec:
  ports:
  - name: backendapi
    port: 8080
    protocol: TCP
  selector:
    component: server
    kustomize.component: metadata
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: metadata-ui
    kustomize.component: metadata
  name: metadata-ui
  namespace: kubeflow
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: metadata-ui
    kustomize.component: metadata
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  labels:
    app: metadata-ui
    kustomize.component: metadata
  name: metadata-ui
  namespace: kubeflow
spec:
  selector:
    matchLabels:
      app: metadata-ui
      kustomize.component: metadata
  template:
    metadata:
      labels:
        app: metadata-ui
        kustomize.component: metadata
      name: ui
    spec:
      containers:
      - image: registry.cn-hangzhou.aliyuncs.com/nhj_images/metadata-ui:v0.1.8
        imagePullPolicy: IfNotPresent
        name: metadata-ui
        ports:
        - containerPort: 3000
      serviceAccountName: metadata-ui
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    component: db
    kustomize.component: metadata
  name: metadata-db
  namespace: kubeflow
spec:
  replicas: 1
  selector:
    matchLabels:
      kustomize.component: metadata
  template:
    metadata:
      labels:
        component: db
        kustomize.component: metadata
      name: db
    spec:
      containers:
      - args:
        - --datadir
        - /var/lib/mysql/datadir
        image: mysql:8.0.3
        name: db-container
        ports:
        - containerPort: 3306
          name: dbapi
        readinessProbe:
          exec:
            command:
            - /bin/bash
            - -c
            - mysql -D $$MYSQL_DATABASE -p$$MYSQL_ROOT_PASSWORD -e 'SELECT 1'
          initialDelaySeconds: 5
          periodSeconds: 2
          timeoutSeconds: 1
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: metadata-mysql
      volumes:
      - name: metadata-mysql
        persistentVolumeClaim:
          claimName: metadata-mysql
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    component: server
    kustomize.component: metadata
  name: metadata-deployment
  namespace: kubeflow
spec:
  replicas: 3
  selector:
    matchLabels:
      kustomize.component: metadata
  template:
    metadata:
      labels:
        component: server
        kustomize.component: metadata
    spec:
      containers:
      - command:
        - ./server/server
        - --http_port=8080
        - --mysql_service_host=metadata-db.kubeflow
        - --mysql_service_port=3306
        - --mysql_service_user=root
        - --mysql_service_password=$(MYSQL_ROOT_PASSWORD)
        - --mlmd_db_name=metadb
        image: registry.cn-shenzhen.aliyuncs.com/shikanon/kubeflow-images-public.metadata:v0.1.8
        name: container
        ports:
        - containerPort: 8080
          name: backendapi
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: metadata-ui
  namespace: kubeflow
spec:
  gateways:
  - kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /metadata
    rewrite:
      uri: /metadata
    route:
    - destination:
        host: metadata-ui.kubeflow.svc.cluster.local
        port:
          number: 80
    timeout: 300s
